<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp">

    <TextView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/altitude"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/altitude"
        app:layout_constraintEnd_toStartOf="@id/overlap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings" />

    <EditText
        android:id="@+id/overlap"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/overlap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/altitude"
        app:layout_constraintTop_toBottomOf="@id/settings" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/speed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/altitude" />

    <RadioGroup
        android:id="@+id/speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/altitude">
        <RadioButton
            android:id="@+id/lowSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/low" />
        <RadioButton
            android:id="@+id/MidSpeed"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Mid" />
        <RadioButton
            android:id="@+id/HighSpeed"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/High" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/endOfFly"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/speed" />

    <RadioGroup
        android:id="@+id/actionAfterFinished"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/speed">
        <RadioButton
            android:id="@+id/finishNone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/finishNone"
            />
        <RadioButton
            android:id="@+id/finishGoHome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/finishGoHome"
            />
        <RadioButton
            android:id="@+id/finishAutoLanding"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/finishAutoLanding"
            />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
